# exp-ffi-dart

./: README.md  pubspec.yaml
blurhash_generator/: README.md
blurhash_generator/blurhash_library/: CMakeLists.txt  blurhash.h
blurhash_library/: .gitignore  CMakeLists.txt  blurhash.def  blurhash_stb.c
function_struct_by_value/: hello.dart
function_struct_by_value/hello_library/: hello.c  hello.h
json_parser_ffi/: .gitignore  README.md  pubspec.yaml
json_parser_ffi/example/: create_and_parse_back.dart  json_parser_ffi_example.dart  main.dart  parse_benchmark.dart
json_parser_ffi/lib/: json_parser_ffi.dart
json_parser_ffi/lib/cjson_library/: cJSON_wrap.xml
json_parser_ffi/lib/src/: json_parser_ffi_base.dart
json_parser_ffi/lib/src/bindings/: constants.dart  structs.dart  typedefs.dart
json_parser_ffi/test/: json_parser_ffi_test.dart
proto_gen_ffi_bindings/: README.md  auto.sh  build_and_gen.sh  pubspec.yaml  test.h  test_generated.dart  test_in_c.cpp
proto_gen_ffi_bindings/lib/: main.dart
proto_gen_ffi_bindings/lib/clang_bindings/: 1.dart  constants.dart  generated_bindings.dart  typedefs.dart
proto_gen_ffi_bindings/tool/: bind_gen.dart  gen_bindings.sh
proto_gen_ffi_bindings/using_c/: .gitignore  CMakeLists.txt  run.sh  test_in_c.c
proto_gen_ffi_bindings/wrapped_libclang_library/: build_dylib.sh  wrapper.c
simple_blurHash_generator/: README.md  pubspec.yaml
simple_blurHash_generator/blurhash_library/: blurhash_stb.c
string_play/: README.md  pubspec.yaml
